Server test 2 clients (#17)
* server test with 2 clients

---------

Co-authored-by: google-labs-jules[bot] <161369871+google-labs-jules[bot]@users.noreply.github.com>
Co-authored-by: Yura <yura@yura.net>